--- a/src/main/resources/templates/changepassword.html
+++ b/src/main/resources/templates/changepassword.html
@@ -17,15 +17,15 @@
         </tr>
         <tr>
             <th>Current password:</th>
-            <td><input data-th-field="*{currentpassword}"></td>
+            <td><input type="password" data-th-field="*{currentpassword}"></td>
         </tr>
         <tr>
             <th>New password:</th>
-            <td><input data-th-field="*{newpassword1}"></td>
+            <td><input type="password" data-th-field="*{newpassword1}"></td>
         </tr>
         <tr>
             <th>New password:</th>
-            <td><input data-th-field="*{newpassword2}"></td>
+            <td><input type="password" data-th-field="*{newpassword2}"></td>
         </tr>
         <tr>
            <td> <button type="submit">Confirm</button> </td>
