--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <div class="container">
-    <span class="text1">Ez a belépőoldalunk.</span>
+    <span class="text1">Project of Sales</span>
     <span class="text2">Csak kiskereskedéseknek</span>
     <div class="button1">
         <a href="/register" class="btn">Regisztráció</a>
