--- a/src/main/resources/templates/admin_orders.html
+++ b/src/main/resources/templates/admin_orders.html
@@ -9,13 +9,32 @@
     <table>
         <tr>
             <th>Rendelés szám</th>
+            <th>Megrendelő</th>
             <th>Rendelés megjegyzés</th>
             <th>Termékek</th>
+            <th>Mennyiség</th>
+            <th>Végösszeg</th>
         </tr>
         <tr data-th-each="order: ${orders}">
             <td data-th-text="${order.id}"></td>
+            <td data-th-text="${order.customer.companyName}"></td>
+            </td>
             <td data-th-text="${order.orderDescription}"></td>
-            <td data-th-text="${order.cartItems}"></td>
+            <td><table>
+                <tr data-th-each="order: ${order.cartItems}">
+                    <td data-th-text="${order.productName}"></td>
+            </table>
+            </td>
+            <td><table>
+                <tr data-th-each="order: ${order.cartItems}">
+                    <td data-th-text="${order.quantity}"></td>
+            </table>
+            </td>
+            <td><table>
+                <tr data-th-each="order: ${order.cartItems}">
+                    <td data-th-text="${order.amount}"></td>
+            </table>
+            </td>
         </tr>
     </table>
 </div>
