Order design done Cart design done Admin upload design done Admin users done

--- a/src/main/resources/templates/admin_upload.html
+++ b/src/main/resources/templates/admin_upload.html
@@ -3,45 +3,116 @@
 <head>
     <meta charset="UTF-8">
     <title>Termékfeltöltés</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+          integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+          crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <link rel="stylesheet" href="/new_home.css">
 </head>
+<header>
+    <nav id="navbar">
+        <div class="menu">
+            <div>
+                <img src="sales2.png" class="logo" alt="">
+                <ul>
+                    <li><a href="#">Újdonságok</a></li>
+                </ul>
+                <ul class="inputBox">
+                    <li><span id="toggleProjects">    </span><a href="#">Projektek</a></li>
+                    <li><span id="toggleNews">    </span><a href="#">Újdonságok</a></li>
+                    <li><span id="toggleMarket">    </span><a href="#">Bolt</a></li>
+                    <li><span id="toggleCart">    </span><a href="/cart">Kosár</a></li>
+                    <li><span id="toggleAbout">    </span><a href="#">Rólunk</a></li>
+                    <li><span id="toggleDoor">    </span><a href="/logout">Kijelentkezés</a></li>
+                </ul>
+                <ul class="social-media">
+                    <h5>Kövess minket!</h5>
+                    <li><a href="https://facebook.com/"><img data-th-src="@{facebook.png}"></a></li>
+                    <li><a href="https://www.instagram.com/"><img data-th-src="@{instagram.png}"></a></li>
+                    <li><a href="https://www.linkedin.com/"><img data-th-src="@{linkedin.png}"></a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="container">
+            <a href="#" class="brand"><p>
+                Welcome <b>[[${#request.userPrincipal.principal.companyName}]]</b>
+            </p></a>
+            <div class="container-inner">
+                <ul>
+                    <li><a href="/home">Home</a></li>
+                    <li><a href="/connections">Contact</a></li>
+                    <li><a href="/cart">Cart</a></li>
+                </ul>
+            </div>
+            <i class="fas fa-bars" id="menu-btn"></i>
+        </div>
+    </nav>
+</header>
 <body>
+<div class="container-back">
 <form data-th-action="@{/admin/upload}" method="post" data-th-object="${newProduct}">
     <table>
         <tr>
             <th>Cikkszám</th>
-            <td><input type="text" data-th-field="*{articleNumber}"></td>
+            <td><input class="input-wrap" placeholder="Cikkszám" type="text" data-th-field="*{articleNumber}"></td>
         </tr>
         <tr>
             <th>EAN kód</th>
-            <td><input type="text" data-th-field="*{EANCode}"></td>
+            <td><input class="input-wrap" placeholder="EAN kód" type="text" data-th-field="*{EANCode}"></td>
         </tr>
         <tr>
             <th>Terméknév</th>
-            <td><input type="text" data-th-field="*{articleName}"></td>
+            <td><input class="input-wrap" placeholder="Terméknév" type="text" data-th-field="*{articleName}"></td>
         </tr>
         <tr>
             <th>Mennyiség</th>
-            <td><input type="text" data-th-field="*{quantity}"></td>
+            <td><input class="input-wrap" placeholder="Mennyiség" type="text" data-th-field="*{quantity}"></td>
         </tr>
         <tr>
             <th>Ár</th>
-            <td><input type="text" data-th-field="*{price}"></td>
+            <td><input class="input-wrap" placeholder="Ár" type="text" data-th-field="*{price}"></td>
         </tr>
         <tr>
             <th>Beszállító</th>
-            <td><input type="text" data-th-field="*{supplier}"></td>
+            <td><input class="input-wrap" placeholder="Beszállító" type="text" data-th-field="*{supplier}"></td>
         </tr>
         <tr>
             <th>Év</th>
-            <td><input type="text" data-th-field="*{year}"></td>
+            <td><input class="input-wrap" placeholder="Év" type="text" data-th-field="*{year}"></td>
         </tr>
         <tr>
             <td colspan="2">
-                <button type="submit">Létrehozás</button>
+                <button class="button3" type="submit">Létrehozás</button>
             </td>
         </tr>
 
     </table>
 </form>
+</div>
+<script>
+    const menBtn = document.getElementById('menu-btn');
+    const navBar = document.getElementById('navbar');
+    const menu = document.querySelector('.menu');
+
+    const offset = 30;
+    menBtn.addEventListener('click', () => {
+        menu.classList.toggle('menu-open');
+    });
+    window.addEventListener("scroll", () => {
+        if (pageYOffset > offset) {
+            navBar.classList.add('navbar-active');
+        } else {
+            navBar.classList.remove('navbar-active')
+        }
+    });
+    window.addEventListener("scroll", () => {
+        if (pageXOffset > offset) {
+            navBar.classList.add('navbar-active');
+        } else {
+            navBar.classList.remove('navbar-active');
+        }
+    });
+
+
+</script>
 </body>
 </html>
