--- a/src/main/resources/static/new_home.css
+++ b/src/main/resources/static/new_home.css
@@ -1,44 +1,73 @@
-body{
+body {
     margin: 0;
-    font-family:Helvetica,sans-serif;
-    background: rgba(0,0,0,0.3) url("background.png")
-    no-repeat center;
+    font-family: Helvetica, sans-serif;
+    background: rgba(0, 0, 0, 0.3) url("background.png") no-repeat center;
     background-size: cover;
     background-blend-mode: darken;
     min-height: 100vh;
 }
-*{
+
+* {
     box-sizing: border-box;
 }
-ul{
-    list-style-type:none;
+
+ul {
+    list-style-type: none;
     padding: 0;
 }
-.tableFixHead          { overflow: auto; height: 500px; text-align: left; color:white ; position:absolute; left:10%; right: 10%; top:8% }
-.tableFixHead thead th { position: sticky; top: 0; z-index: 1; }
+
+.tableFixHead {
+    overflow: auto;
+    height: 500px;
+    text-align: left;
+    color: white;
+    position: absolute;
+    left: 10%;
+    right: 10%;
+    top: 8%
+}
+
+.tableFixHead thead th {
+    position: sticky;
+    top: 0;
+    z-index: 1;
+}
 
 /* Just common table stuff. Really. */
-table  { border-collapse: collapse; width: 100%; }
-th, td { padding: 8px 16px; }
-th     { background:#898989; }
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
 
-header{
+th, td {
+    padding: 8px 16px;
+}
+
+th {
+    background: #898989;
+}
+
+header {
     min-height: 15vh;
 }
+
 main {
     padding: 2em;
     background: #111;
 }
+
 main p {
     font-size: 1.1em;
     line-height: 27px;
     color: #fff;
 }
-.container, .container-inner{
+
+.container, .container-inner {
     margin: 0 auto;
     width: 100%;
 }
-.container{
+
+.container {
     max-width: 1350px;
     position: relative;
     display: grid;
@@ -47,9 +76,11 @@ main p {
     align-items: center;
     margin: 0 auto;
 }
+
 .container-inner {
     max-width: 1000px;
 }
+
 nav {
     background: rgba(0, 0, 0, 0.7);
     position: fixed;
@@ -61,26 +92,32 @@ nav {
     transition: 0.7s;
     color: #fff;
 }
+
 .brand {
     font-size: 1.6em;
 }
+
 nav .container-inner {
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
 }
+
 nav .container ul {
     width: 100%;
     margin: 0 1em;
 }
+
 nav .container ul:nth-child(2) {
     text-align: right;
 }
+
 nav .container ul li {
     display: inline-block;
     margin: 0 0.7em;
 }
+
 nav a {
     text-decoration: none;
     font-size: 1.2em;
@@ -88,55 +125,107 @@ nav a {
     font-weight: 600;
     color: #fff;
 }
+
 nav a:hover {
     color: #5ebc67;
 }
+
 .input-wrap {
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 0.5em 0;
+    color: black;
+    border-radius: 8px;
+
 
 }
-form {
+
+.button2 {
+    background-color: #ffffff;
+    border-radius: 8px;
+    color: black;
+    padding: 3px 38px;
+    text-align: center;
+    font-size: 16px;
+    margin: 4px 2px;
+    opacity: 0.8;
+    transition: 0.3s;
+    display: inline-block;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.button2:hover {opacity: 1}
+
+.button3 {
+    background-color: #ffffff;
+    border-radius: 8px;
+    color: black;
+    padding: 3px 38px;
+    text-align: center;
+    font-size: 16px;
+    margin: 4px 2px;
+    opacity: 0.8;
+    transition: 0.3s;
+    display: inline-block;
+    text-decoration: none;
+    cursor: pointer;
+    position: absolute;
+    left: 30%;
+    right: 30%;
+    top: 90%;
+}
+
+.button32:hover {opacity: 1}
+
+.form-none{
+    color:white
+}
+
+.container-back{
     height: 680px;
     width: 1400px;
     background-color: black;
-    opacity: 88%;
+    opacity: 94%;
     position: absolute;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     top: 480px;
     left: 50%;
     border-radius: 10px;
     backdrop-filter: blur(10px);
-    border: 2px solid rgba(255,255,255,0.1);
+    border: 2px solid rgba(255, 255, 255, 0.1);
     box-shadow: 0 0 40px rgb(8 7 16 / 60%);
     padding: 50px 35px;
 }
-form *{
-    font-family: 'Poppins',sans-serif;
+form * {
+    font-family: 'Poppins', sans-serif;
     color: #ffffff;
     letter-spacing: 0.5px;
     outline: none;
     border: none;
 }
-form h3{
+
+form h3 {
     font-size: 32px;
     font-weight: 500;
     line-height: 42px;
     text-align: center;
 }
+
 nav.fa-bars {
     font-size: 1.2em;
     cursor: pointer;
     transition: 0.3s;
     text-align: right;
 }
+
 nav .fa-bars:hover {
     color: #e54416;
 }
+
 .menu {
-  background: #111;
+    background: #111;
     position: fixed;
     top: 0;
     left: 0;
@@ -145,19 +234,22 @@ nav .fa-bars:hover {
     font-size: 1.3em;
     height: 0;
     opacity: 0;
-    transition: 0.7s
-            cubic-bezier(.74,-0.02,.83,.67);
+    transition: 0.7s cubic-bezier(.74, -0.02, .83, .67);
     overflow-y: hidden;
 }
+
 .logo {
     width: 7em;
 }
+
 .menu ul, .menu form {
     margin: 1em auto;
 }
+
 .menu li {
     margin: 1em 0;
 }
+
 .menu > div {
     display: flex;
     justify-content: start;
@@ -167,52 +259,190 @@ nav .fa-bars:hover {
     height: 100%;
     overflow-y: scroll;
 }
+
 .menu > div::-webkit-scrollbar {
     display: none;
 }
+
 .menu .social-media {
     margin: 1em 0;
 }
+
 .social-media li {
     display: inline-block;
     margin: 0 0.5em;
 }
+
 .social-media img {
     width: 25px;
     margin: 25px 5px;
 }
+
 .social-icons h5 {
     color: white;
 }
+
 .menu-open {
     height: 100vh;
     opacity: 1;
 }
+
 .navbar-active {
     background: #111;
     padding: 1em;
 }
+
 .inputBox #toggleCart::before {
-    content:'\f07a';
+    content: '\f07a';
     font-family: fontAwesome;
 }
+
+.inputBox #toggleCart2::before {
+    content: '\f07a';
+    font-family: fontAwesome;
+}
+
 .inputBox #toggleProjects::before {
-    content:'\f1c0';
+    content: '\f1c0';
     font-family: fontAwesome;
 }
+
 .inputBox #toggleNews::before {
-    content:'\f02d';
+    content: '\f02d';
     font-family: fontAwesome;
 }
+
 .inputBox #toggleMarket::before {
-    content:'\f54f';
+    content: '\f54f';
     font-family: fontAwesome;
 }
+
 .inputBox #toggleDoor::before {
     content: '\f52b';
     font-family: fontAwesome;
 }
+
 .inputBox #toggleAbout::before {
     content: '\f2bb';
     font-family: fontAwesome;
+}
+.contact {
+    position: relative;
+    min-height: 100vh;
+    padding:50px 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    color: #04AA6D;
+}
+.contact .content {
+    max-width: 800px;
+    text-align: center;
+}
+.contact . content h2 {
+    front-size:36px;
+    font-weight: 500;
+    color:#fff;
+}
+.contact .content p {
+    font-weight: 300;
+    color:#fff;
+}
+.containerForm {
+    width:100% ;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+}
+.containerForm .contactInfo {
+    width: 50%;
+    display:flex;
+    flex-direction: column;
+}
+.containerForm .contactInfo .box {
+    position: relative;
+    padding: 20px 0;
+    display:flex;
+
+}
+.containerForm .contactInfo .box .icon {
+    min-width: 60px;
+    height: 60px;
+    background: #fff;
+    display:flex;
+    justify-content:center ;
+    align-items:center;
+    border-radius: 50%;
+    font-size:22px;
+
+}
+.containerForm .contactInfo .box .text {
+    display: flex;
+    margin-left: 20px;
+    font-size:16px;
+    color:#fff;
+    flex-direction: column;
+    font-weight: 300;
+
+}
+.containerForm .contactInfo .box .text h3 {
+    font-weight: 500;
+    color:#3a9283;
+}
+.contactForm {
+    width:40%;
+    padding:40px;
+}
+.contactForm h2 {
+    font-size:30px;
+    color:#04AA6D;
+    font-weight: 500;
+}
+.contactForm .inputBox {
+    position: relative;
+    width: 100%;
+    margin-top: 10px;
+}
+.contactForm .inputBox input,
+.contactForm .inputBox textarea
+{
+    width:100%;
+    padding:5px 0 ;
+    font-size:16px;
+    margin:10px 0;
+    border:none;
+    border-bottom: 2px solid #04AA6D;
+    outline: none;
+    resize:none;
+}
+.contactForm .inputBox span {
+    position: absolute;
+    left:0;
+    padding: 5px 0;
+    font-size: 16px;
+    margin:10px 0;
+    pointer-events: none;
+    transition: 0.5s;
+    color:#000000;
+
+}
+.contactForm .inputBox  input:focus ~ span,
+.contactForm .inputBox  input:valid ~ span,
+.contactForm .inputBox  textarea:focus ~ span,
+.contactForm .inputBox  textarea:valid ~ span
+{
+    color: #1845ad;
+    font-size: 12px;
+    transform: translate(-20px);
+}
+.contactForm .inputBox input [type="submit"] {
+    width: 100px;
+    background: #00bcd4;
+    color:#fff;
+    border: none;
+    cursor:pointer;
+    padding:10px;
+    font-size: 18px;
 }
