--- a/src/main/resources/templates/new_home.html
+++ b/src/main/resources/templates/new_home.html
@@ -18,7 +18,7 @@
                     <li><span id="toggleProjects">    </span><a href="#">Projektek</a></li>
                     <li><span id="toggleNews">    </span><a href="#">Újdonságok</a></li>
                     <li><span id="toggleMarket">    </span><a href="#">Bolt</a></li>
-                    <li><span id="toggleCart">    </span><a href="#">Kosár</a></li>
+                    <li><span id="toggleCart">    </span><a href="/cart">Kosár</a></li>
                     <li><span id="toggleAbout">    </span><a href="#">Rólunk</a></li>
                     <li><span id="toggleDoor">    </span><a href="/logout">Kijelentkezés</a></li>
                 </ul>
@@ -36,8 +36,9 @@
             </p></a>
             <div class="container-inner">
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="/home">Home</a></li>
+                    <li><a href="/connections">Contact</a></li>
+                    <li><a href="/cart">Cart</a></li>
                 </ul>
             </div>
             <i class="fas fa-bars" id="menu-btn"></i>
@@ -45,8 +46,7 @@
     </nav>
 </header>
 <body>
-<form action="">
-    <div class="input-wrap">
+    <div class="container-back">
         <div class="tableFixHead">
             <table>
                 <thead>
@@ -54,23 +54,31 @@
                     <th>Cikkszám</th>
                     <th>EAN kód</th>
                     <th>Terméknév</th>
-                    <th>Mennyiség</th>
+                    <th>Készlet</th>
                     <th>Ár</th>
+                    <th>Mennyiség</th>
                 </tr>
                 </thead>
                 <tbody>
-                <tr data-th-each="product: ${products}">
-                    <td data-th-text="${product.articleNumber}"></td>
-                    <td data-th-text="${product.EANCode}"></td>
-                    <td data-th-text="${product.articleName}"></td>
-                    <td data-th-text="${product.quantity}"></td>
-                    <td data-th-text="${product.price}"></td>
+                <tr data-th-each="datas:${products}">
+
+                    <td th:text="${datas.articleNumber}">Name:</td>
+
+                    <td th:text="${datas.EANCode}">Name:</td>
+
+                    <td th:text="${datas.articleName}">Name:</td>
+
+                    <td th:text="${datas.quantity}">Name:</td>
+
+                    <td th:text="${datas.price}">Name:</td>
+                    <!--TODO Lassú betöltés  -->
+                    <td><form method="post" data-th-action="@{/home/{EANCode}(EANCode=${datas.EANCode})}">
+                        <input class="input-wrap" type="number" name="quantity"><button class="button2" type="submit">Hozzáadás</button></form></td>
                 </tr>
                 </tbody>
             </table>
         </div>
     </div>
-</form>
 <script>
     const menBtn = document.getElementById('menu-btn');
     const navBar = document.getElementById('navbar');
@@ -98,10 +106,5 @@
 
 
 </script>
-<div id="container">
-    <div class="form">
-
-    </div>
-</div>
 </body>
 </html>
