--- a/src/main/resources/templates/admin_orders.html
+++ b/src/main/resources/templates/admin_orders.html
@@ -33,14 +33,14 @@
             </div>
         </div>
         <div class="container">
-            <a href="#" class="brand"><p>
-                Welcome <b>[[${#request.userPrincipal.principal.companyName}]]</b>
+            <a href="/userprofile" class="brand"><p>
+                <b>[[${#request.userPrincipal.principal.companyName}]]</b>
             </p></a>
             <div class="container-inner">
                 <ul>
-                    <li><a href="/home">Home</a></li>
-                    <li><a href="/connections">Contact</a></li>
-                    <li><a href="/cart">Cart</a></li>
+                    <li><a href="/home">Kezdőlap</a></li>
+                    <li><a href="/connections">Kapcsolat</a></li>
+                    <li><a href="/cart">Kosár</a></li>
                 </ul>
             </div>
             <i class="fas fa-bars" id="menu-btn"></i>
