--- a/src/main/resources/templates/orders.html
+++ b/src/main/resources/templates/orders.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Főoldal</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>Rendeléseim</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+          integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+          crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="stylesheet" href="/new_home.css">
 </head>
 <header>
@@ -12,11 +14,11 @@
             <div>
                 <img src="sales2.png" class="logo" alt="">
                 <ul>
-                    <li><a href="#">Újdonságok</a> </li>
+                    <li><a href="#">Újdonságok</a></li>
                 </ul>
                 <ul class="inputBox">
                     <li><span id="toggleProjects">    </span><a href="#">Projektek</a></li>
-                    <li><span id="toggleNews">    </span><a href="orders">Rendeléseim</a></li>
+                    <li><span id="toggleNews">    </span><a href="#">Újdonságok</a></li>
                     <li><span id="toggleMarket">    </span><a href="#">Bolt</a></li>
                     <li><span id="toggleCart">    </span><a href="/cart">Kosár</a></li>
                     <li><span id="toggleAbout">    </span><a href="#">Rólunk</a></li>
@@ -46,63 +48,62 @@
     </nav>
 </header>
 <body>
-    <div class="container-back">
-        <div class="tableFixHead">
-            <table>
-                <thead>
-                <tr>
-                    <th>Cikkszám</th>
-                    <th>EAN kód</th>
-                    <th>Terméknév</th>
-                    <th>Készlet</th>
-                    <th>Ár</th>
-                    <th>Mennyiség</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr data-th-each="datas:${products}">
-
-                    <td th:text="${datas.articleNumber}">Name:</td>
-
-                    <td th:text="${datas.EANCode}">Name:</td>
-
-                    <td th:text="${datas.articleName}">Name:</td>
-
-                    <td th:text="${datas.quantity}">Name:</td>
-
-                    <td th:text="${datas.price}">Name:</td>
-                    <!--TODO Lassú betöltés  -->
-                    <td><form method="post" data-th-action="@{/home/{EANCode}(EANCode=${datas.EANCode})}">
-                        <input class="input-wrap" type="number" name="quantity"><button class="button2" type="submit">Hozzáadás</button></form></td>
-                </tr>
-                </tbody>
-            </table>
-        </div>
+<div class="container-back">
+    <div class="tableFixHead">
+        <table>
+            <tr>
+                <th>Rendelés szám</th>
+                <th>Termékek</th>
+                <th>Mennyiség</th>
+                <th>Végösszeg</th>
+            </tr>
+            <tr data-th-each="order: ${orders}">
+                <td data-th-text="${order.id}"></td>
+                <td>
+                    <table>
+                        <tr data-th-each="order: ${order.cartItems}">
+                            <td data-th-text="${order.productName}"></td>
+                    </table>
+                </td>
+                <td>
+                    <table>
+                        <tr data-th-each="order: ${order.cartItems}">
+                            <td data-th-text="${order.quantity}"></td>
+                    </table>
+                </td>
+                <td>
+                    <table>
+                        <tr data-th-each="order: ${order.cartItems}">
+                            <td data-th-text="${order.amount}"></td>
+                    </table>
+                </td>
+            </tr>
+        </table>
     </div>
+</div>
 <script>
     const menBtn = document.getElementById('menu-btn');
     const navBar = document.getElementById('navbar');
     const menu = document.querySelector('.menu');
 
     const offset = 30;
-    menBtn.addEventListener('click',() => {
+    menBtn.addEventListener('click', () => {
         menu.classList.toggle('menu-open');
     });
-    window.addEventListener("scroll",() => {
+    window.addEventListener("scroll", () => {
         if (pageYOffset > offset) {
             navBar.classList.add('navbar-active');
         } else {
             navBar.classList.remove('navbar-active')
         }
     });
-    window.addEventListener("scroll", ()=> {
+    window.addEventListener("scroll", () => {
         if (pageXOffset > offset) {
             navBar.classList.add('navbar-active');
         } else {
             navBar.classList.remove('navbar-active');
         }
     });
-
 
 
 </script>
