--- a/src/main/resources/templates/admin_users.html
+++ b/src/main/resources/templates/admin_users.html
@@ -3,36 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <title>Felhasználók</title>
-    <link rel="stylesheet" href="/homestyle.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+          integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+          crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <link rel="stylesheet" href="/new_home.css">
 </head>
-<body>
-<div class="banner">
-    <div class="navbar">
-        <div class="logo">
-            <a href="/home"><img data-th-src="@{sales2.png}" class="logo"></a>
-        </div>
-        <div  class="nav">
-            <ul>
-                <li><a data-th-href="@{/admin/users}">Felhasználók</a></li>
-                <li><a data-th-href="@{/admin/income}">Bevétel</a></li>
-                <li><a data-th-href="@{/admin/upload}">Termék hozzáadása</a></li>
-            </ul>
-        </div>
-        <div class="welcomemessage">
-
-            <p>
-                Welcome <b>[[${#request.userPrincipal.principal.companyName}]]</b>
-            </p>
-            </form>
-        </div>
-        <footer>
-            <div style = "position:absolute; left:80px; top:92% ">
-                <form th:action="@{/logout}" method="post">
-                    <input type="submit" class="btn" value="Sign Out">
+<header>
+    <nav id="navbar">
+        <div class="menu">
+            <div>
+                <img src="sales2.png" class="logo" alt="">
+                <ul>
+                    <li><a href="/new_home">Vásárlói felület</a></li>
+                </ul>
+                <ul class="inputBox">
+                    <li><span id="toggleProjects">    </span><a href="#">Projektek</a></li>
+                    <li><span id="toggleNews">    </span><a href="orders">Rendeléseim</a></li>
+                    <li><span id="toggleMarket">    </span><a href="#">Bolt</a></li>
+                    <li><span id="toggleCart">    </span><a href="/cart">Kosár</a></li>
+                    <li><span id="toggleAbout">    </span><a href="#">Rólunk</a></li>
+                    <li><span id="toggleDoor">    </span><a href="/logout">Kijelentkezés</a></li>
+                </ul>
+                <ul class="social-media">
+                    <h5>Kövess minket!</h5>
+                    <li><a href="https://facebook.com/"><img data-th-src="@{facebook.png}"></a></li>
+                    <li><a href="https://www.instagram.com/"><img data-th-src="@{instagram.png}"></a></li>
+                    <li><a href="https://www.linkedin.com/"><img data-th-src="@{linkedin.png}"></a></li>
+                </ul>
             </div>
-        </footer>
-        </form>
-    </div>
+        </div>
+        <div class="container">
+            <a href="/admin" class="brand"><p>
+                ADMIN
+            </p></a>
+            <div class="container-inner">
+                <ul>
+                    <li><a href="/admin">Kezdőlap</a></li>
+                    <li><a href="/admin/upload">Termékfeltöltés</a></li>
+                    <li><a href="/admin/users">Felhasználók</a></li>
+                </ul>
+            </div>
+            <i class="fas fa-bars" id="menu-btn"></i>
+        </div>
+    </nav>
+</header>
+<body>
+<div class="container-back">
     <div class="tableFixHead">
         <table>
             <tr>
@@ -51,12 +67,32 @@
             </tr>
         </table>
     </div>
-    <div class="social-icons">
-        <h5>Kövess minket!</h5>
-        <a href="https://facebook.com/"> <img data-th-src="@{facebook.png}"> </a>
-        <a href="https://www.instagram.com/"> <img data-th-src="@{instagram.png}"> </a>
-        <a href="https://www.linkedin.com/"> <img data-th-src="@{linkedin.png}"> </a>
-    </div>
+</div>
+<script>
+    const menBtn = document.getElementById('menu-btn');
+    const navBar = document.getElementById('navbar');
+    const menu = document.querySelector('.menu');
 
+    const offset = 30;
+    menBtn.addEventListener('click', () => {
+        menu.classList.toggle('menu-open');
+    });
+    window.addEventListener("scroll", () => {
+        if (pageYOffset > offset) {
+            navBar.classList.add('navbar-active');
+        } else {
+            navBar.classList.remove('navbar-active')
+        }
+    });
+    window.addEventListener("scroll", () => {
+        if (pageXOffset > offset) {
+            navBar.classList.add('navbar-active');
+        } else {
+            navBar.classList.remove('navbar-active');
+        }
+    });
+
+
+</script>
 </body>
 </html>
