--- a/src/main/resources/templates/admin_users.html
+++ b/src/main/resources/templates/admin_users.html
@@ -12,9 +12,9 @@
     <nav id="navbar">
         <div class="menu">
             <div>
-                <img src="sales2.png" class="logo" alt="">
+                <img src="/sales2.png" class="logo" alt="">
                 <ul>
-                    <li><a href="/new_home">Vásárlói felület</a></li>
+                    <li><a href="/home">Vásárlói felület</a></li>
                 </ul>
                 <ul class="inputBox">
                     <li><span id="toggleProjects">    </span><a href="#">Projektek</a></li>
@@ -26,9 +26,9 @@
                 </ul>
                 <ul class="social-media">
                     <h5>Kövess minket!</h5>
-                    <li><a href="https://facebook.com/"><img data-th-src="@{facebook.png}"></a></li>
-                    <li><a href="https://www.instagram.com/"><img data-th-src="@{instagram.png}"></a></li>
-                    <li><a href="https://www.linkedin.com/"><img data-th-src="@{linkedin.png}"></a></li>
+                    <li><a href="https://facebook.com/"><img data-th-src="@{/facebook.png}"></a></li>
+                    <li><a href="https://www.instagram.com/"><img data-th-src="@{/instagram.png}"></a></li>
+                    <li><a href="https://www.linkedin.com/"><img data-th-src="@{/linkedin.png}"></a></li>
                 </ul>
             </div>
         </div>
