--- a/src/main/resources/templates/changepassword.html
+++ b/src/main/resources/templates/changepassword.html
@@ -16,19 +16,19 @@
             </td>
         </tr>
         <tr>
-            <th>Current password:</th>
+            <th>Jelenlegi jelszó:</th>
             <td><input type="password" data-th-field="*{currentpassword}"></td>
         </tr>
         <tr>
-            <th>New password:</th>
+            <th>Új jelszó:</th>
             <td><input type="password" data-th-field="*{newpassword1}"></td>
         </tr>
         <tr>
-            <th>New password:</th>
+            <th>Új jelszó:</th>
             <td><input type="password" data-th-field="*{newpassword2}"></td>
         </tr>
         <tr>
-           <td> <button type="submit">Confirm</button> </td>
+           <td> <button type="submit">Megerősítés</button> </td>
         </tr>
     </table>
 </form>
