--- a/src/main/resources/templates/admin_income.html
+++ b/src/main/resources/templates/admin_income.html
@@ -18,11 +18,11 @@
                     <li><a href="/home">Vásárlói felület</a></li>
                 </ul>
                 <ul class="inputBox">
-                    <li><span id="toggleProjects">    </span><a href="#">Projektek</a></li>
-                    <li><span id="toggleNews">    </span><a href="orders">Rendeléseim</a></li>
-                    <li><span id="toggleMarket">    </span><a href="#">Bolt</a></li>
+                    <li><span id="toggleNews">    </span><a href="/admin/upload">Termékfeltöltés</a></li>
+                    <li><span id="toggleMarket">    </span><a href="/admin/income">Bevétel</a></li>
+                    <li><span id="toggleAbout">    </span><a href="/admin/users">Felhasználók</a></li>
+                    <li><span id="toggleProjects">    </span><a href="/admin/orders">None</a></li>
                     <li><span id="toggleCart">    </span><a href="/cart">Kosár</a></li>
-                    <li><span id="toggleAbout">    </span><a href="#">Rólunk</a></li>
                     <li><span id="toggleDoor">    </span><a href="/logout">Kijelentkezés</a></li>
                 </ul>
                 <ul class="social-media">
@@ -39,9 +39,7 @@
             </p></a>
             <div class="container-inner">
                 <ul>
-                    <li><a href="/admin">Kezdőlap</a></li>
-                    <li><a href="/admin/upload">Termékfeltöltés</a></li>
-                    <li><a href="/admin/users">Felhasználók</a></li>
+                    <li><a href="/admin">Megrendelések</a></li>
                 </ul>
             </div>
             <i class="fas fa-bars" id="menu-btn"></i>
