--- a/src/main/resources/templates/admin_upload.html
+++ b/src/main/resources/templates/admin_upload.html
@@ -15,11 +15,11 @@
                     <li><a href="/home">Vásárlói felület</a> </li>
                 </ul>
                 <ul class="inputBox">
-                    <li><span id="toggleProjects">    </span><a href="#">Projektek</a></li>
-                    <li><span id="toggleNews">    </span><a href="orders">Rendeléseim</a></li>
-                    <li><span id="toggleMarket">    </span><a href="#">Bolt</a></li>
+                    <li><span id="toggleNews">    </span><a href="/admin/upload">Termékfeltöltés</a></li>
+                    <li><span id="toggleMarket">    </span><a href="/admin/income">Bevétel</a></li>
+                    <li><span id="toggleAbout">    </span><a href="/admin/users">Felhasználók</a></li>
+                    <li><span id="toggleProjects">    </span><a href="/admin/orders">None</a></li>
                     <li><span id="toggleCart">    </span><a href="/cart">Kosár</a></li>
-                    <li><span id="toggleAbout">    </span><a href="#">Rólunk</a></li>
                     <li><span id="toggleDoor">    </span><a href="/logout">Kijelentkezés</a></li>
                 </ul>
                 <ul class="social-media">
@@ -36,9 +36,7 @@
             </p></a>
             <div class="container-inner">
                 <ul>
-                    <li><a href="/admin">Kezdőlap</a></li>
-                    <li><a href="/admin/upload">Termékfeltöltés</a></li>
-                    <li><a href="/admin/users">Felhasználók</a></li>
+                    <li><a href="/admin">Megrendelések</a></li>
                 </ul>
             </div>
             <i class="fas fa-bars" id="menu-btn"></i>
@@ -51,33 +49,21 @@
         <table>
             <tr>
                 <th>Cikkszám</th>
-                <td><input class="input-wrap" placeholder="Cikkszám" type="text" data-th-field="*{articleNumber}"></td>
-            </tr>
-            <tr>
                 <th>EAN kód</th>
-                <td><input class="input-wrap" placeholder="EAN kód" type="text" data-th-field="*{EANCode}"></td>
-            </tr>
-            <tr>
                 <th>Terméknév</th>
-                <td><input class="input-wrap" placeholder="Terméknév" type="text" data-th-field="*{articleName}"></td>
-            </tr>
-            <tr>
                 <th>Mennyiség</th>
-                <td><input class="input-wrap" placeholder="Mennyiség" type="text" data-th-field="*{quantity}"></td>
-            </tr>
-            <tr>
                 <th>Ár</th>
-                <td><input class="input-wrap" placeholder="Ár" type="text" data-th-field="*{price}"></td>
-            </tr>
-            <tr>
                 <th>Beszállító</th>
-                <td><input class="input-wrap" placeholder="Beszállító" type="text" data-th-field="*{supplier}"></td>
-            </tr>
-            <tr>
                 <th>Év</th>
-                <td><input class="input-wrap" placeholder="Év" type="text" data-th-field="*{year}"></td>
             </tr>
             <tr>
+                <td><input class="input-wrap-upload" placeholder="Cikkszám" type="text" data-th-field="*{articleNumber}"></td>
+                <td><input class="input-wrap-upload" placeholder="EAN kód" type="text" data-th-field="*{EANCode}"></td>
+                <td><input class="input-wrap-upload" placeholder="Terméknév" type="text" data-th-field="*{articleName}"></td>
+                <td><input class="input-wrap-upload" placeholder="Mennyiség" type="text" data-th-field="*{quantity}"></td>
+                <td><input class="input-wrap-upload" placeholder="Ár" type="text" data-th-field="*{price}"></td>
+                <td><input class="input-wrap-upload" placeholder="Beszállító" type="text" data-th-field="*{supplier}"></td>
+                <td><input class="input-wrap-upload" placeholder="Év" type="text" data-th-field="*{year}"></td>
                 <td colspan="2">
                     <button class="button3" type="submit">Létrehozás</button>
                 </td>
