--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -14,14 +14,15 @@
             <div>
                 <img src="sales2.png" class="logo" alt="">
                 <ul>
-                    <li><a href="#">Újdonságok</a></li>
+                    <li><a data-th-if="${#request.userPrincipal.principal.email =='admin'}" href="/admin">Admin felület</a> </li>
+                    <li><a data-th-unless="${#request.userPrincipal.principal.email =='admin'}" href="#">Újdonságok</a> </li>
                 </ul>
                 <ul class="inputBox">
-                    <li><span id="toggleProjects">    </span><a href="#">Projektek</a></li>
-                    <li><span id="toggleNews">    </span><a href="#">Újdonságok</a></li>
-                    <li><span id="toggleMarket">    </span><a href="#">Bolt</a></li>
+                    <li><span id="toggleNews">    </span><a href="/orders">Rendeléseim</a></li>
+                    <li><span id="toggleMarket">    </span><a href="/home">Bolt</a></li>
                     <li><span id="toggleCart">    </span><a href="/cart">Kosár</a></li>
-                    <li><span id="toggleAbout">    </span><a href="#">Rólunk</a></li>
+                    <li><span id="toggleAbout">    </span><a href="#">Üres</a></li>
+                    <li><span id="toggleProjects">    </span><a href="#">Üres</a></li>
                     <li><span id="toggleDoor">    </span><a href="/logout">Kijelentkezés</a></li>
                 </ul>
                 <ul class="social-media">
